Fix: Fixes theme picker to work as expected on mobile phones

--- a/styles/main.css
+++ b/styles/main.css
@@ -232,10 +232,17 @@ footer p {
     margin-bottom: 0;
 }
 
-.theme-picker ul{
+.theme-picker nav {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+}
+  
+.theme-picker ul {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     list-style: none;
     margin: 0;
     padding: 1em 40px 2em;
